// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircHeatmap legend with known line segment should to match snapshot 1`] = `
<svg
  height={270}
  id="legend"
  viewBox="0 0 200 270"
  width="200"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    key="attribute 1"
    transform="translate(0 0)"
  >
    <defs>
      <linearGradient
        id="attribute 1-legendGradient"
      >
        <stop
          offset="0%"
          stopColor="#ffffff"
        />
        <stop
          offset="50%"
          stopColor="#0000ff"
        />
        <stop
          offset="100%"
          stopColor="#000000"
        />
      </linearGradient>
    </defs>
    <g>
      <text
        textAnchor="middle"
        x="100"
        y="20"
      >
        attribute 1
      </text>
      <rect
        fill="url('#attribute 1-legendGradient')"
        height="20"
        width="150"
        x="25"
        y="30"
      />
      <text
        textAnchor="middle"
        x="25"
        y="65"
      >
        0
      </text>
      <text
        textAnchor="middle"
        x="175"
        y="65"
      >
        50
      </text>
    </g>
  </g>
  <g
    key="attribute 1"
    transform="translate(0 70)"
  >
    <defs>
      <linearGradient
        id="attribute 1-legendGradient"
      >
        <stop
          offset="0%"
          stopColor="#ffffff"
        />
        <stop
          offset="50%"
          stopColor="#0000ff"
        />
        <stop
          offset="100%"
          stopColor="#000000"
        />
      </linearGradient>
    </defs>
    <g>
      <text
        textAnchor="middle"
        x="100"
        y="20"
      >
        attribute 1
      </text>
      <rect
        fill="url('#attribute 1-legendGradient')"
        height="20"
        width="150"
        x="25"
        y="30"
      />
      <text
        textAnchor="middle"
        x="25"
        y="65"
      >
        0
      </text>
      <text
        textAnchor="middle"
        x="175"
        y="65"
      >
        50
      </text>
    </g>
  </g>
  <g
    key="attribute 1"
    transform="translate(0 140)"
  >
    <defs>
      <linearGradient
        id="attribute 1-legendGradient"
      >
        <stop
          offset="0%"
          stopColor="#ffffff"
        />
        <stop
          offset="50%"
          stopColor="#0000ff"
        />
        <stop
          offset="100%"
          stopColor="#000000"
        />
      </linearGradient>
    </defs>
    <g>
      <text
        textAnchor="middle"
        x="100"
        y="20"
      >
        attribute 1
      </text>
      <rect
        fill="url('#attribute 1-legendGradient')"
        height="20"
        width="150"
        x="25"
        y="30"
      />
      <text
        textAnchor="middle"
        x="25"
        y="65"
      >
        0
      </text>
      <text
        textAnchor="middle"
        x="175"
        y="65"
      >
        50
      </text>
    </g>
  </g>
  <g
    transform="translate(0 230)"
  >
    <text
      textAnchor="middle"
      x="100"
      y="0"
    >
      Known
    </text>
    <line
      stroke="black"
      strokeWidth="3"
      x1="50"
      x2="150"
      y1="10"
      y2="10"
    />
  </g>
</svg>
`;

exports[`CircHeatmap legend without known line segment should to match snapshot 1`] = `
<svg
  height={270}
  id="legend"
  viewBox="0 0 200 270"
  width="200"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    key="attribute 1"
    transform="translate(0 0)"
  >
    <defs>
      <linearGradient
        id="attribute 1-legendGradient"
      >
        <stop
          offset="0%"
          stopColor="#ffffff"
        />
        <stop
          offset="50%"
          stopColor="#0000ff"
        />
        <stop
          offset="100%"
          stopColor="#000000"
        />
      </linearGradient>
    </defs>
    <g>
      <text
        textAnchor="middle"
        x="100"
        y="20"
      >
        attribute 1
      </text>
      <rect
        fill="url('#attribute 1-legendGradient')"
        height="20"
        width="150"
        x="25"
        y="30"
      />
      <text
        textAnchor="middle"
        x="25"
        y="65"
      >
        0
      </text>
      <text
        textAnchor="middle"
        x="175"
        y="65"
      >
        50
      </text>
    </g>
  </g>
  <g
    key="attribute 1"
    transform="translate(0 70)"
  >
    <defs>
      <linearGradient
        id="attribute 1-legendGradient"
      >
        <stop
          offset="0%"
          stopColor="#ffffff"
        />
        <stop
          offset="50%"
          stopColor="#0000ff"
        />
        <stop
          offset="100%"
          stopColor="#000000"
        />
      </linearGradient>
    </defs>
    <g>
      <text
        textAnchor="middle"
        x="100"
        y="20"
      >
        attribute 1
      </text>
      <rect
        fill="url('#attribute 1-legendGradient')"
        height="20"
        width="150"
        x="25"
        y="30"
      />
      <text
        textAnchor="middle"
        x="25"
        y="65"
      >
        0
      </text>
      <text
        textAnchor="middle"
        x="175"
        y="65"
      >
        50
      </text>
    </g>
  </g>
  <g
    key="attribute 1"
    transform="translate(0 140)"
  >
    <defs>
      <linearGradient
        id="attribute 1-legendGradient"
      >
        <stop
          offset="0%"
          stopColor="#ffffff"
        />
        <stop
          offset="50%"
          stopColor="#0000ff"
        />
        <stop
          offset="100%"
          stopColor="#000000"
        />
      </linearGradient>
    </defs>
    <g>
      <text
        textAnchor="middle"
        x="100"
        y="20"
      >
        attribute 1
      </text>
      <rect
        fill="url('#attribute 1-legendGradient')"
        height="20"
        width="150"
        x="25"
        y="30"
      />
      <text
        textAnchor="middle"
        x="25"
        y="65"
      >
        0
      </text>
      <text
        textAnchor="middle"
        x="175"
        y="65"
      >
        50
      </text>
    </g>
  </g>
</svg>
`;
